--- a/app/src/main/res/layout/activity_incio.xml
+++ b/app/src/main/res/layout/activity_incio.xml
@@ -12,7 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Bienvenido"
-        android:textColor="@color/black"
+        android:textColor="@color/purple_200"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -289,7 +289,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Salir"
-        android:textColor="@color/black"
+        android:textColor="@color/purple_700"
         android:textSize="15sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
